# eilts_bot

./: .dockerignore  docker-compose.yaml  main.py  pyproject.toml
src/: __init__.py  __main__.py  bot_instance.py  config.py  paths.py  photo_temp.py
src/adapter/postgres/: __init__.py  file.py  init_db.py
src/controller/tg_bot/handlers/: __init__.py
src/controller/tg_bot/routers/: __init__.py
src/controller/tg_bot/routers/commands/: __init__.py  command_listening.py  command_start.py
src/controller/tg_bot/routers/text/: __init__.py  module_handler.py
src/keyboards/inline_kbs/: panel_condition.py
src/keyboards/reply_kbs/: __init__.py  module_kb.py  start_kb.py
src/logs/: __init__.py  loguru_setup.py
src/models/: Base.py  File.py  Section.py  Task.py  TaskAnswer.py  TaskDescription.py  Test.py  TestAttempt.py  User.py  __init__.py  models.py
src/services/: __init__.py  db_funcs.py
