[project]
name = "ielts-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.17.0",
    "mypy>=1.15.0",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]


[tool.mypy]
strict = true
